2012-02-14 Pierre Wieser <pwieser@trychlos.org>

	* src/nact/nact-menubar-edit.c (nact_menubar_edit_on_copy): Incrementing
	the objects ref before copying is useless.

	* src/nact/nact-main-window.c
	(on_base_initialize_gtk, on_base_initialize_window): Move connections to
	the signals when initializing window; this is not a big difference as the
	main window is the only window of its class, but does the right thing in
	the right place.

	* src/core/na-object-item.c
	(na_object_item_copyref_items, na_object_item_free_items):
	Improve debug messages.

2012-02-08 Pierre Wieser <pwieser@trychlos.org>

	* src/nact/nact-menubar-file.c (nact_menubar_file_on_new_profile):
	Attach new profile to its parent action.

	* src/core/na-object-action.c
	(na_object_action_new_with_profile, na_object_action_new_with_defaults):
	Rather use the macro na_object_attach_profile().

2012-02-06 Pierre Wieser <pwieser@trychlos.org>

	* src/nact/nact-tree-view.c (display_label): Simplify the code.

	* src/nact/base-gtk-utils.c (base_gtk_utils_table_to_grid):
	Only tries to dump children in maintainer mode.

2012-02-04 Pierre Wieser <pwieser@trychlos.org>

	* src/nact/base-window.c (on_initialize_gtk_toplevel_class_handler):
	Always dump Gtk hierarchy in maintainer mode.

	* src/nact/nact-assistant-export.c (format_tree_view_initialize_gtk):
	* src/nact/nact-main-window.c (on_base_initialize_gtk):
	* src/nact/nact-tree-view.c (nact_tree_view_new): Updated accordingly.

	* src/nact/nact-icommand-tab.c (on_base_initialize_gtk):
	Dynamically converts GtkTable to GtkGrid.

	* src/nact/base-gtk-utils.c:
	* src/nact/base-gtk-utils.h (base_gtk_utils_table_to_grid): New function.

	* src/core/na-gtk-utils.c (na_gtk_utils_find_widget_by_name):
	Also search inside of unnamed widgets.

2012-02-02 Pierre Wieser <pwieser@trychlos.org>

	* src/io-xml/Makefile.am:
	* src/io-xml/naxml-formats.c: Data files are installed in a private
	subdirectory.

	* src/io-desktop/Makefile.am: